pagina lista para ser estatica

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
-  <link href="styles/style.css" rel="stylesheet" type="text/css" />
-  <link rel="preload" href="styles/JosefinSans-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin/>
-  <link rel="preload" href="styles/OpenSans-VariableFont_wdth,wght.ttf" as="font" type="font/ttf" crossorigin/>
+  <link href="/styles/style.css" rel="stylesheet" type="text/css" />
+  <link rel="preload" href="/styles/JosefinSans-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin/>
+  <link rel="preload" href="/styles/OpenSans-VariableFont_wdth,wght.ttf" as="font" type="font/ttf" crossorigin/>
 
 </head>
 <meta
