cambio de orden, ahora el noar va primero

--- a/ar/index.html
+++ b/ar/index.html
@@ -10,7 +10,7 @@
   content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
 />
 
-<script type="module" src="./simplest_noar.js"></script>
+<script type="module" src="./simplest_ar.js"></script>
 
 <body style="overflow-x: hidden; margin: 0">
   <div
