--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
 />
 
-<script type="module" src="./simplest.js"></script>
+<script type="module" src="./simplest_noar.js"></script>
 
 <body style="overflow-x: hidden; margin: 0">
   <div
@@ -51,6 +51,7 @@
       <a href="#"><img src="https://picsum.photos/id/288/640/640" /></a>
       <a href="#"><img src="https://picsum.photos/id/299/640/640" /></a>
       -->
+      
     </div>
   </div>
 </body>
